Unable to sign/encrypt (PGP) when stared with -compose parameter and Thunderbird wasn't already running
Categories
(Thunderbird :: Message Compose Window, defect)
Tracking
(thunderbird_esr140 wontfix, thunderbird145 wontfix)
People
(Reporter: it, Assigned: mkmelin)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Steps to reproduce:
Start Thunderbird with the -compose parameter
Actual results:
Error message when trying to send:
"Unable to send the message, because there is a problem with your personal key. You do not seem to have the secret key for xxx <xxx@xxx.xx> (key ID 0x...) on your keyring; you cannot use the key for signing."
Expected results:
Email should be sent without errors.
There is no problem with the key since everything works fine when starting Thunderbird without the -compose parameter.
| Assignee | ||
Comment 1•1 month ago
|
||
Too many command line options...
https://searchfox.org/comm-central/rev/11c4faf26470390c334a101137e2cb2cd67f5709/mail/components/MessengerContentHandler.sys.mjs#742 ->
https://searchfox.org/comm-central/rev/11c4faf26470390c334a101137e2cb2cd67f5709/mailnews/compose/src/nsMsgComposeService.cpp#1095
| Assignee | ||
Updated•1 month ago
|
| Assignee | ||
Comment 2•1 month ago
|
||
Move the compose commmand line handling to MessengerContentHandler to where it belongs.
It had some extra processing which wasn't needed when handled in the correct place,
and not as a weird side effect of validate().
| Reporter | ||
Comment 3•29 days ago
|
||
Thanks!
Updated•26 days ago
|
Updated•19 days ago
|
| Assignee | ||
Updated•19 days ago
|
| Assignee | ||
Updated•19 days ago
|
Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/68dd9381972a
Unable to sign/encrypt (PGP) when started with -compose parameter and Thunderbird wasn't already running. r=kaie
Updated•19 days ago
|
Description
•