Bug 1993943 - Unable to sign/encrypt (PGP) when started with -compose parameter and Thunderbird wasn't already running. r=kaie

Move the compose commmand line handling to MessengerContentHandler to where it belongs.
It had some extra processing which wasn't needed when handled in the correct place,
and not as a weird side effect of validate().

Differential Revision: https://phabricator.services.mozilla.com/D269746

--HG--
extra : amend_source : b1c7d1b34416762317cd68646520944179a1ab44